# circuitron

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_ANALYSIS_REPORT_COMPREHENSIVE.md  Dockerfile  HALLUCINATION_DETECTION_FAILURE_REPORT.md  IMPLEMENTATION_PLAN.md  ISSUES.md  KNOWLEDGE_GRAPH_VALIDATION_IMPLEMENTATION_PLAN.md  MINOR_ISSUES_IMPLEMENTATION_PLAN.md  MINOR_ISSUES_REPORT.md  Makefile  PIPELINE_REFACTORING_SUMMARY.md  README.md  REVIEW.md  RUNTIME_ERROR_HANDLING_IMPLEMENTATION_PLAN.md  SETUP.md  analysis.txt  architecture.md  architecture_diagram.mmd  backend_frontend_readiness.md  check_ai_script_hallucinations.txt  circuitron_logo.py  cli_ui_ux_rework_plan.md  connection-network-analysis.md  docker-compose-integration.md  erc_info.txt  footprint_disable_toggle.md  jest.config.js  logo.py  main.py  mcp.env.example  mcp_guide.txt  onboard.txt  overview.md  package-lock.json  package.json  problem.txt  (+6 more)
.github/: copilot-instructions.md
backend/: __init__.py  api.py  main.py
circuitron/: __init__.py  agents.py  cli.py  config.py  correction_context.py  cost_estimator.py  debug.py  docker_session.py  exceptions.py  guardrails.py  mcp_manager.py  mcp_server.py  model_prices_builtin.py  models.py  network.py  onboarding.py  pipeline.py  progress.py  prompts.py  settings.py  setup.py  setup_agent.py  telemetry.py  tools.py  utils.py
cli-ui-images/: ui_images_description.md
collab_progress/: 2025-09-01-output-generation-fix.md  CHANGELOG.md  PROTOCOL.md  README.md  ci-fixes-model-switch-and-tests-09-08-2025.md  container-cleanup-tests-10-08-2025.md  docs-cleanup-section-09-08-2025.md  docs-skidl-kb-refresh-01-09-2025.md  fixes-headless-progress-08-08-2025.md  generated-files-current-session-only-01-09-2025.md  graceful-exit-esc-11-08-2025.md  headless-mode-audit-remediation-2025-08-08.md  kicad-session-serialization-and-retry-01-09-2025.md  mcp-startup-checks-09-02-2025.md  model-switch-interactive-09-08-2025.md  phase-1-headless-mode-08-08-2025.md  runtime-tool-accepts-script-content-01-09-2025.md  setup-command-implementation-09-02-2025.md  signal-handler-kicad-stop-09-08-2025.md  track_progress.md  (+14 more)
(+117 files in other folders)
