[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitron"
version = "0.1.0"
description = "Agentic PCB design accelerator converting natural language prompts into SKiDL code and schematics."
readme = "README.md"
authors = [{name = "Circuitron Developers"}]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.3",
    "langchain-community>=0.2.3",
    "langchain-core>=0.2.3",
    "langchain-mistralai>=0.0.4",
    "mistralai>=0.2.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.27.0",
    "sseclient-py>=1.8.0",
    "skidl>=2.0.1",
    "openai>=1.3.0",
    "tiktoken>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

