[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitron"
version = "0.1.0"
description = "Agentic PCB design accelerator converting natural language prompts into SKiDL code and schematics."
readme = "README.md"
authors = [{name = "Shaurya Sethi"}]
requires-python = ">=3.10"
dependencies = [
    "openai-agents",
    "openai>=1.84.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "skidl>=2.0.1",
    "tiktoken>=0.7.0",
    "huggingface_hub>=0.23.1",
]

[project.scripts]
circuitron = "circuitron.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["circuitron*"]

